--- a/src/Components/css/client.css
+++ b/src/Components/css/client.css
@@ -33,17 +33,28 @@
 .client .bottom p{
     font-size: 16px;
     line-height: 28.8px;
+    font-weight: 500;
+    line-height: 28.7px;
+}
+ 
+.client .group{
+    display: flex;
+    justify-content: space-around;
+    gap: 35px;
 }
 
-.card{
-    width: 413px;
-    height:366px;
-    padding:10px;
-    background-color: black;
-    border-radius: 30px;
-    color:white; 
+
+.client .group img{
+    width:350px; 
+    height: 350px;
+    transition: all 0.3s
 }
 
+
+.client .group img:hover{
+    width:400px; 
+    height: 400px;
+}
 
 
 
