--- a/src/Components/css/footer.css
+++ b/src/Components/css/footer.css
@@ -32,11 +32,17 @@
 }
 .footer .bottom{
     display: flex;
-    justify-content: space-evenly;
-   
+    gap:180px;  
 }
 .social{
     display: flex;
     align-items: center;
     gap:2px;
+}
+.footer .bottom .contact li{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:5px;
+    margin-top: 14px;
 }
