new about us page

--- a/src/Components/css/Home.css
+++ b/src/Components/css/Home.css
@@ -1,73 +1,49 @@
 #home{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content:space-around;
-    width: 100%;
-    background-image: url("../../Images/Background_Noise.png");
-}
-.home_left{
-    width:700px;
+ 
+    background-image: url("../../Images/home_bg.png");
+    background-repeat: no-repeat;
     
 }
-.home_left .top .title{    
-    font-size: 72px;
-    font-weight: 600;
-    line-height: 79.3px;
+#home .home{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+.home .head{
+    width: 1240px;
+    font-size: 46px;
+     font-weight: 600;
+     line-height: 62.3px;
+     text-align: center;
+
+}
+ 
 .content{
     color:#666A6F;
+    width: 1240px;
     font-size: 16px;
     font-weight: 500;
     line-height: 32px;
-}
-
-.home_left .bottom{
-    width: 700px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.home_right{
-    display: flex;
-    flex-direction: column;
+    text-align: center;
  
 }
- .home_right .top{
+
+.home_img{
+    width: 1280px;
+  height: 567px;
+}
+
+.company .head{
+    font-size: 48px;
+    text-align: center;
+}
+.company .group{
     display: flex;
-    flex-direction: row;
- }
-.group {
-    position: relative;
-    margin-right: 20px;
-    z-index: 0;  
+    justify-content:center;
+    gap:40px;
 }
-
-.image2 {
-    position: absolute;
-    left: 100px;
-    top: -25px;
-    z-index: 2; 
+.company .group img{
+    width: 150px;
 }
-
-.mid .btn{
-    width: Auto 222px;
-            height: 100%;
-            padding: 16px 32px;
-            background: linear-gradient(97deg, #0076D0 35%, #0EFED4 100%);
-            border-radius: 70px;
-            border: 1px solid #0076D0;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            gap: 42px;
-}
-.mid .btn-text{
-    color: white;
-            font-size: 16px;
-            font-family: 'Plus Jakarta Sans', sans-serif;
-            font-weight: 700;
-            line-height: 28.80px;
-            word-wrap: break-word;
-}
+ 
