--- a/src/Components/css/feedback.css
+++ b/src/Components/css/feedback.css
@@ -1,12 +1,12 @@
-.testimonial-text{
+.testimonial{
     width: 1200px;
-    margin-left: 200px;
+   
     font-size: 32px;
     line-height: 35.2px;
     font-weight: 600;
     text-align: center;
 }
-.author-info{
+.author{
     display: flex;
     justify-content: start;
     gap: 10px;
@@ -18,71 +18,60 @@
     justify-content: start;
     line-height: 0%;
 }
-.author-name{
+.author{
     font-size: 18px;
     margin-right: 76px;
 }
 .author-role{
     font-size: 16px;
 }
-.trig{
-    display: flex;
-    flex-direction: row;
+.testimonial-slider {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+ 
+
+.quote {
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 10px;
+  text-align: center ;                    
 }
 
-.carousel-container {
-    position: relative; /* Necessary for absolute positioning of arrows */
-  }
-  
-  .custom-next-arrow,
-  .custom-prev-arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: transparent;
-    color: #fff;
-    cursor: pointer;
-    z-index: 1; /* Ensure arrows are above carousel content */
-  }
-  
-  .custom-next-arrow {
-    right: 90px;
-    top:220px;
-  }
-  
-  .custom-prev-arrow {
-    left: 1208px;
-    top:220px;
 
-  }
-  
-  .carousel-indicators {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    bottom: 20px; /* Adjust as needed */
-  }
-  
-  .indicator {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #ccc;
-    margin: 0 5px;
-    cursor: pointer;
-  }
-  
-  .indicator.active {
-    background-color: #333;
-  }
-  
-  .carousel-status {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #333;
-    color: #9b1b1b;
-    font-size: 18px;
-    padding: 10px;
+.navigation {
+  margin-top: 20px;
+  display: flex;
+  /* margin-left: 100px; */
+  float: right;
+  align-items: center;
+}
+
+.navigation button {
+  width: 150px;
+  height: 60px;
+  background: #f8fbff;
+  color: #000000;
  
-  }
+  border: 1px solid black;
+  padding: 10px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 74px;
+  font-size: 18px;
+  
+}
+
+.navigation button:hover {
+  background: #030303;
+  border-radius: 570px;
+  color:white;
+}
+
+.author-details{
+  display: flex;
+  flex-direction: row;
+
+}
+ 
