--- a/src/Components/css/Navbar.css
+++ b/src/Components/css/Navbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    display: flex;
+    display: flex; 
     padding: 20px;
      justify-content: space-around;
      align-items: center;
@@ -8,34 +8,33 @@
     top: 0;
     z-index: 1000; 
 }
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: center;
+  align-items: center;
+}
 .logoContainer {
     position: relative;
     width: 134.4px; /* Adjust based on actual SVG size */
     height: 48px; /* Adjust based on actual SVG size */
   }
-.logo {
-    position: absolute;
-    margin-left: 80px;
-    top: 14.01;
-    left: 4.08;
-    width: 100%;
-    height: auto;
-    background: 'linear-gradient(97deg, #0076D0 35%, #0EFED4 100%)';
-  }
-.lists ul{
-    display: flex;
-    
-    list-style: none;
+ 
+.navbar-links{    
+  display: flex;
+  list-style: none;
+  margin-left: 40px;
 }
-.lists ul li{
-    margin-left: 60px;
+.navbar-links ul li{
+    margin-left: 30px;
 }
-.lists ul li a{
+.navbar-links ul li a{
     text-decoration: none;
     color: black;
 }
 
-.lists ul li a:hover{
+.navbar-links ul li a:hover{
     color: blue;
     width: auto;
     height: auto;
@@ -56,7 +55,7 @@
     background-color: white; /* Background color white */
     color: #0076D0; /* Text color */
     font-size: 16px; /* Font size */
-    margin-right: 80px;
+    margin-left: 180px;
     cursor: pointer; /* Cursor to pointer to indicate it's clickable */
     /* gap: 42px; Gap between elements inside the button, if any */
     /* text-transform: uppercase; Optional: Transform text to uppercase */
@@ -67,5 +66,110 @@
     background-color: #0076D0; /* Background color changes on hover */
     color: white; /* Text color changes on hover */
   }
+  .navbar-btn {
+    display: none; /* Initially hide the menu button for larger screens */
+  }
+  .burger {
+    display: none; /* Hidden by default on larger screens */
+    cursor: pointer;   
+}
+.line1, .line2, .line3 {
+  width: 25px;
+  height: 3px;
+  background: linear-gradient(97deg, #0076D0 35%, #0EFED4 100%); ;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+.navbar-links ul {
+  list-style-type: none;
+  display: flex;
+}
+
+.navbar-links li {
+  padding: 0 15px;
+}
+
+.navbar-links a {
+  color: #0e0d0d;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+ 
+  @media (max-width: 768px) {
+    /* .navbar-btn {
+      display: block;
+    } */
+    .navbar{
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+        
+    }
+  .logo {
+    position: absolute;
+    margin-left:0;
+    top: 14.01;
+    left: 4.08;
+    width: 100%;
+    height: auto;
+    background: 'linear-gradient(97deg, #0076D0 35%, #0EFED4 100%)';
+  }
+  }
+
+
+@media screen and (max-width: 768px) {
+  .navbar-links {
+    display: none;
+    flex-direction: column;
+    
+    width: 100%;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    background-color: white;
+    z-index: 1;
+    transition: all 0.3s ease;
+    margin: 0;
+  }
+  .navbar-links ul {
+  flex-direction: column;
+  justify-content: flex-start;
+  }
+  .navbar-links ul li {
+    margin: 0;
+   margin-bottom: 30px;
+    }
+  .navbar-links.active {
+    display: flex;
+  }
+  .navbar-links.active {
+    display: flex;
+  }
+  .get_btn {
+    margin-left: 20px;
+    margin-bottom: 10px;
+  }
+  .burger {
+    display: block;
+  }
+  .line1.active {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  .line2.active {
+    opacity: 0;
+  }
+  .line3.active {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+ 
+}
+ 
+
  
  
+
+ 
+
+ 
+
