--- a/src/Components/css/fund.css
+++ b/src/Components/css/fund.css
@@ -50,16 +50,21 @@
     height: 40px;
     text-align: center;
     border-radius: 50%;
+     
     
 }
 .cards .title h2{
     color:#0076D0;
     font-size: 24px;
-    margin-left: 50px;
+    margin-left: 40px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .cards .dese p{
-    font-size: 18px;
-    margin-left: 50px;
+    font-size: 16px;
+    margin-left: 40px;
+    margin-top: 0;
+    color:#878C91;
 
 }
  
